[package]
edition = "2024"
name = "embassy-hall-analog"
version = "0.3.1"
authors = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
build = "build.rs"   # ← activer le build script
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Driver async no_std pour capteur à effet Hall linéaire analogique OPEN-SMART (RP2040/RP235x)."
documentation = "https://docs.rs/embassy-hall-analog"
readme = "README.md"
keywords = [
    "embassy",
    "hall-effect",
    "magnetic",
    "analog",
    "no-std",
]
categories = [
    "embedded",
    "no-std",
    "hardware-support",
]
license = "GPL-2.0-or-later"
repository = "https://github.com/jorgeandrecastro/embassy-hall-analog"

[lib]
name = "embassy_hall_analog"
path = "src/lib.rs"

[dependencies.embassy-rp]
version = "0.10"
optional = true          # ← CRITIQUE : embassy-rp devient optionnelle


[dependencies.embassy-time]
version = "0.5"

[features]
default = ["rp2040"]
rp2040  = ["embassy-rp/rp2040"]
rp235xa = ["embassy-rp/rp235xa"]
rp235xb = ["embassy-rp/rp235xb"]

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true